updates modeling chapter section

--- a/docs/00-outline.tex
+++ b/docs/00-outline.tex
@@ -31,13 +31,13 @@ describe these types of uncertainties and the phases they represent.}
 In \acp{esom}, non-physical constraints are often introduced to direct the model
 towards a desired outcome. For example, carbon emissions are often constrained
 to identify a least cost pathway to achieving a specified emissions target by a
-certain date. If the models results are subsequently used to support policies
+certain date. If the model's results are subsequently used to support policies
 that advance society towards that emissions target, then the modeled constraint
 represents a normative position. That society \textit{should} pursue this goal.
 In the case of carbon emissions, this is frequently stated outright (cite some
 papers that do this?). There are other constraints that researchers sometimes
 apply which might be construed as a normative position but go unstated and
-unsupported. Thus, introducing \textit{normative uncertainty}. Normative
+unsupported. Thus, introducing a \textit{normative uncertainty}. Normative
 uncertainty, that uncertainty which arises from the existence of a plurality of
 equally good alternatives, is seldom discussed in the literature (cite?).
 \textcolor{red}{Can I say precisely how many papers discuss normative
@@ -103,6 +103,9 @@ Some normative positions of this thesis are:
 
 Link between normative and parametric uncertainties. Normative decisions (i.e., assumptions)
 are made about different model parameters. Along with which technologies are represented.
+At this stage, the uncertainties addressed range between aleatory and epistemic. The former 
+is a ``known unknown'' that could be improved with more research. The latter corresponds to 
+``unknown unknowns'' or a ``deep uncertainty'' that cannot be improved (cite).
 
 \subsection{Descriptive}
 Link between parametric and structural. This is where the ``modeling'' happens. Constraints
@@ -113,6 +116,9 @@ Link between structural and normative. Model results are interpreted and policy 
 are prescribed. Alternatively, researchers may start the cycle anew by using the model
 results to adjust the normative assumptions. Perhaps because the model results don't show
 a desirable future?
+
+
+
 
 % \input{3-osier/30-intro}
 
