--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -60,3 +60,6 @@
 \acro{pypsa}[\texttt{PyPSA}]{Python for Power Systems Analysis}
 \acro{lib}[LiB]{lithium-ion battery}
 \acrodefplural{lib}[LiBs]{lithium-ion batteries}
+\acro{reason}[RE$^3$ASON]{Renewable Energies and Energy Efficiency Analysis and System Optimization}
+\acro{mavt}[MAVT]{multi-attribute value theory}
+\acro{mcda}[MCDA]{multi-criteria decision analysis}.
