updates the hyper-local literature review

--- a/docs/00-outline.tex
+++ b/docs/00-outline.tex
@@ -98,6 +98,19 @@ Thus, I expanded my study to the state level; interviewing people from the
 challenges blocking municipal influence from energy planning processes. Further,
 this evinces a tension among distributive, procedural, and recognition justice.
 
+\section{Progress on developing tools for local use}
+
+\begin{itemize}
+    \item The literature review chapter indicated that most energy modeling tools
+    and much of the related literature focus on state- or national-scale energy
+    systems.
+    \item The the hyper-local section highlighted some studies that integrated
+    local perspectives with energy modeling. Those papers include 
+    \cite{mckenna_combining_2018, johannsen_municipal_2023, fleischhacker_portfolio_2019}
+    \item There have also been studies investigating the development of models for, and
+    use by, city and urban planners.
+\end{itemize}
+
 \section{Municipal Levers: How municipalities make choices about their energy supply}
 There are generally four ways municipalities can make choices about their energy supply.
 
