--- a/docs/2-literature/21-esoms.tex
+++ b/docs/2-literature/21-esoms.tex
@@ -223,10 +223,9 @@ the following reasons \cite{decarolis_using_2011}:
     \item analyzing tradeoffs for problems with many objectives is tedious.
 \end{enumerate}
 These critiques may explain the distinct lack of frameworks that apply \ac{moo}
-for energy system problems. However, there are important benefits to \ac{moo} (
-primarily the opportunity to analyze tradeoffs),
-and the lack of an energy system \textit{framework} to apply this technique is
-one of the gaps this thesis fulfills.
+for energy system problems. However, there are important benefits to \ac{moo} (primarily 
+the opportunity to analyze tradeoffs), and the lack of an energy system \textit{framework}
+to apply this technique is one of the gaps this thesis fulfills.
 
 
 
