--- a/docs/tables/moop_literature.tex
+++ b/docs/tables/moop_literature.tex
@@ -8,7 +8,7 @@ Citation & Model & Algorithm & \multicolumn{6}{c}{Objectives} & \multicolumn{3}{
 \cite{mayer_environmental_2020}  &    &  \acs{nsga2}  & \checkmark &  & \checkmark &  &  &  & \checkmark & \checkmark &  &   \\
 \cite{prina_multi-objective_2020}  &  Oemof-moea  &  \acs{nsga2}  & \checkmark &  & \checkmark &  &  &  & \checkmark & \checkmark & \checkmark &  \checkmark  \\
 \cite{donado_hyres_2020}  &  HYRES  &  GAToolbox  & \checkmark &  &  & \checkmark &  &  &  & \checkmark &  &   \\
-\cite{prina_multi-objective_2018}&    &  \acs{nsga2}  & \checkmark &  & \checkmark &  &  &  & \checkmark & \checkmark &  &   \\
+\cite{prina_multi-objective_2018}&  \texttt{EPLANopt}  &  \acs{nsga2}  & \checkmark &  & \checkmark &  &  &  & \checkmark & \checkmark &  &  \checkmark$^{\text{a}}$ \\
 \cite{samsatli_multi-objective_2018}& &  \acs{ws}  & \checkmark &  & \checkmark &  &  &  & \checkmark & \checkmark & \checkmark &   \\
 \cite{falke_multi-objective_2016}&    &  \acs{nsga2}  & \checkmark &  & \checkmark &  &  &  & \checkmark & \checkmark &  &   \\
 \cite{mahbub_combining_2016}&    &  \acs{nsga2}  & \checkmark &  & \checkmark &  &  &  & \checkmark & \checkmark &  &   \\
@@ -19,5 +19,8 @@ Citation & Model & Algorithm & \multicolumn{6}{c}{Objectives} & \multicolumn{3}{
 \cite{fazlollahi_multi-objectives_2014}  &  &  \acs{nsga2}  & \checkmark &  & \checkmark &  &  &  & \checkmark & \checkmark &  &   \\
 \cite{de-leon_almaraz_assessment_2013}  &    &  \acs{ec}  & \checkmark &  & \checkmark & \checkmark &  &  & \checkmark &  & \checkmark &   \\
 \cite{katsigiannis_multiobjective_2010}  &    &  \acs{nsga2}  & \checkmark &  & \checkmark &  &  &  &  & \checkmark &  &   \\
+\cite{fleischhacker_portfolio_2019}  & \texttt{URBS}, \texttt{rivus} &  \acs{ec}  & \checkmark &  & \checkmark &  &  &  & \checkmark & \checkmark &  & \checkmark  \\
+\cite{johannsen_municipal_2023}  & \texttt{EPLANopt} &  \acs{nsga2}  & \checkmark &  & \checkmark &  &  &  & \checkmark & \checkmark &  & \checkmark$^{\text{a}}$  \\
 \bottomrule
+\multicolumn{13}{l}{$^{\text{a}}$Includes a mix of public and proprietary code.}
 \end{tabular}
